Collada (DAE) exporter messes up vertex colors #35592

Closed
opened 2013-06-01 16:33:38 +02:00 by Kai Gillmann · 4 comments

%%%Hi there :-)

- Operating System, Graphics card ---

Win7 64bit, NV 460

- Blender version with error, and version that worked ---

2.67a - No track when this occurred first

- Short description of error ---

Exporting a simple mesh (e.g. Cube) as Collada DAE with vertexcolors can't be imported properly (colors wrong)

This occurred while writing own collada loader but today I was sceptical the data exported is valid. I downloaded MeshLab 1.3.2 as this is the fastest way of double-checking. When I import the dae in my own project and into meshlab the colors are messed up exactly as in my project.

I made a cube with 4 very different colors (red, green, blue, yellow) and made every vertex opposing have the same color. When I impot the cube, 1 neighboured vertices have a color i didn't use (magenta), additionally the edge is opposing.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Use default new-scene
  2. Use "Vertex Paint" for coloring the cube
  3. Export using collada dae
  4. Import using MeshLab or (as I assume any other program supporting dae with vertex colors)
  • note the pictures are only illustrations of the problem, as I didn't save the cube because it was for testing purposes of my importer.%%%
%%%Hi there :-) - Operating System, Graphics card --- Win7 64bit, NV 460 - Blender version with error, and version that worked --- 2.67a - No track when this occurred first - Short description of error --- Exporting a simple mesh (e.g. Cube) as Collada DAE with vertexcolors can't be imported properly (colors wrong) This occurred while writing own collada loader but today I was sceptical the data exported is valid. I downloaded MeshLab 1.3.2 as this is the fastest way of double-checking. When I import the dae in my own project and into meshlab the colors are messed up exactly as in my project. I made a cube with 4 very different colors (red, green, blue, yellow) and made every vertex opposing have the same color. When I impot the cube, 1 neighboured vertices have a color i didn't use (magenta), additionally the edge is opposing. - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Use default new-scene 2. Use "Vertex Paint" for coloring the cube 3. Export using collada dae 4. Import using MeshLab or (as I assume any other program supporting dae with vertex colors) * note the pictures are only illustrations of the problem, as I didn't save the cube because it was for testing purposes of my importer.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r57209., was casting to MCol rather then MLoopCol.%%%

%%%fixed r57209., was casting to MCol rather then MLoopCol.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Thanks :-)%%%

%%%Thanks :-)%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35592
No description provided.