fix [#35592] Collada (DAE) exporter messes up vertex colors